--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -72,7 +72,7 @@
                         <h2>裁定</h2>
                         <div class="auto-number">
                             <p>
-                                连锁1发动「旋风」, 连锁2发动禁忌的一滴Cost将手卡的「绚岚豪火 凤凰」送去墓地的场合. 那个连锁处理完毕后, 「绚岚豪火 凤凰」不能发动③效果.
+                                连锁1发动「旋风」, 连锁2发动「禁忌的一滴」Cost将手卡的「绚岚豪火 凤凰」送去墓地的场合. 那个连锁处理完毕后, 「绚岚豪火 凤凰」不能发动③效果. 「绚岚涡丽 派比安」也一样. 
                             </p>
                             <p>
                                 「小丑与锁鸟」的效果适用中, 也可以发动「绚岚之权能」的①效果. 那些卡也会回到卡组. 卡组不存在卡的场合, 也能发动那个①效果.
@@ -82,9 +82,6 @@
                             </p>
                             <p>
                                 「绚岚之海灵 派比安」的②效果适用中, 可用的魔法/陷阱区域不足的场合, 先尽可能的把作为对象的怪兽当作永续魔法卡在魔法陷阱区域表侧表示放置. 剩余的怪兽送去墓地.
-                            </p>
-                            <p>
-                                C1发动旋风, C2发动「禁忌的一滴」把手卡的「绚岚涡丽 派比安」送去墓地. 这个连锁处理完毕后, 「绚岚涡丽 派比安」的③效果不能发动. 
                             </p>
                         </div>
 
