--- a/KV.html
+++ b/KV.html
@@ -72,56 +72,67 @@
                     <div class="entry__content">
 
                         <h2>裁定</h2>
-<!-- 1. 已经公开的卡不能为了发动效果而给双方展示.
-2. 为了发动卡的效果而给双方展示的卡, 在发动下一个效果之前, 回到非公开状态.
-3. 为了发动卡的效果而给双方展示的卡, 回到非公开状态的场合, 又在同一个联锁块上因为效果被对方确认手牌的场合, 有必要时必须告知对方是哪张卡发动了效果.
-4. 征服斗魂的`同一连锁上不能发动`只限制一方, 在同一个连锁上自己与对方各能发动①或是②(如果有)任意一个效果.
-5. `征服斗魂 蛟龙`的①效果, `幻创龙 奇幻龙人神`的①效果, 在同一个连锁上自己只能选任意一个发动.
-6. `赌上你的灵魂！`特殊召唤的怪兽, 只要曾一度不在怪兽区域表侧表示存在, 就不会适用`结束阶段回到手卡`.
-7. `向征服斗魂进发！`的①效果在处理时, 作为对象的怪兽不在怪兽区域表侧表示存在的场合, 后续效果全部不处理.
-8. `征服斗魂 里螺旋流雪风`的各个●是按顺序处理的效果, 前一个●效果不能处理的场合, 会继续处理之后的●效果.
-9. 直到进入伤害计算时为止, 才算进行过战斗. 在伤害计算前因为各种原因导致战斗终止的场合, 不能在自己场上的「征服斗魂」怪兽或「斗神的虚像」上面重叠来超量召唤`征服斗魂 洛克斯`.
-10. 场上存在守备表示的「No.41 泥睡魔兽 睡梦貘」，「征服斗魂 螺旋流辻风」的效果处理把守备表示的「征服斗魂」怪兽变成攻击表示后，选「No.41 泥睡魔兽 睡梦貘」变成里侧守备表示的场合，那只变成攻击表示的「征服斗魂」怪兽就这样保持攻击表示。
-11. 先攻的第1回合或者不能进行战斗阶段的回合以及主要阶段2，不能发动「征服斗魂 潘特拉」②的『●地：』效果。 -->
-    
-                        <p>
-                            1. 已经公开的卡不能为了发动效果而给双方展示.
-                        </p>
-                        <p>
-                            2. 为了发动卡的效果而给双方展示的卡, 在发动下一个效果之前, 回到非公开状态.
-                        </p>
-                        <p>	
-                            3. 为了发动卡的效果而给双方展示的卡, 回到非公开状态的场合, 又在同一个联锁块上因为效果被对方确认手牌的场合, 有必要时必须告知对方是哪张卡发动了效果.
-                        </p>
-                        <p>
-                            4. 征服斗魂的`同一连锁上不能发动`只限制一方, 在同一个连锁上自己与对方各能发动①或是②(如果有)任意一个效果.
-                        </p>
-                        <p>
-                            5. `征服斗魂 蛟龙`的①效果, `幻创龙 奇幻龙人神`的①效果, 在同一个连锁上自己只能选任意一个发动.
-                        </p>
-                        <p>
-                            6. `赌上你的灵魂！`特殊召唤的怪兽, 只要曾一度不在怪兽区域表侧表示存在, 就不会适用`结束阶段回到手卡`.
-                        </p>
-                        <p>
-                            7. `向征服斗魂进发！`的①效果在处理时, 作为对象的怪兽不在怪兽区域表侧表示存在的场合, 后续效果全部不处理.
-                        </p>
-                        <p>
-                            8. `征服斗魂 里螺旋流雪风`的各个●是按顺序处理的效果, 前一个●效果不能处理的场合, 会继续处理之后的●效果.
-                        </p>
-                        <p>
-                            9. 直到进入伤害计算时为止, 才算进行过战斗. 在伤害计算前因为各种原因导致战斗终止的场合, 不能在自己场上的「征服斗魂」怪兽或「斗神的虚像」上面重叠来超量召唤`征服斗魂 洛克斯`.
-                        </p>
-                        <p>
-                            10. 场上存在守备表示的「No.41 泥睡魔兽 睡梦貘」，「征服斗魂 螺旋流辻风」的效果处理把守备表示的「征服斗魂」怪兽变成攻击表示后，选「No.41 泥睡魔兽 睡梦貘」变成里侧守备表示的场合，那只变成攻击表示的「征服斗魂」怪兽就这样保持攻击表示。
-                        </p>
-                        <p>
-                            11. 先攻的第1回合或者不能进行战斗阶段的回合以及主要阶段2，不能发动「征服斗魂 潘特拉」②的『●地：』效果。
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                已经公开的卡不能为了发动效果而给双方展示.
+                            </p>
+                            <p>
+                                为了发动卡的效果而给双方展示的卡, 在发动下一个效果之前, 回到非公开状态.
+                            </p>
+                            <p>
+                                为了发动卡的效果而给双方展示的卡, 回到非公开状态的场合, 又在同一个联锁块上因为效果被对方确认手牌的场合, 有必要时必须告知对方是哪张卡发动了效果.
+                            </p>
+                            <p>
+                                「征服斗魂」的`同一连锁上不能发动`只限制一方, 在同一个连锁上自己与对方各能发动①或是②(如果有)任意一个效果.
+                            </p>
+                            <p>
+                                「征服斗魂 蛟龙」的①效果, 「幻创龙 奇幻龙人神」的①效果, 在同一个连锁上自己只能选任意一个发动.
+                            </p>
+                            <p>
+                                「赌上你的灵魂！」特殊召唤的怪兽, 只要曾一度不在怪兽区域表侧表示存在, 就不会适用`结束阶段回到手卡`.
+                            </p>
+                            <p>
+                                「向征服斗魂进发！」的①效果在处理时, 作为对象的怪兽不在怪兽区域表侧表示存在的场合, 后续效果全部不处理.
+                            </p>
+                            <p>
+                                「征服斗魂 里螺旋流雪风」的各个●是按顺序处理的效果, 前一个●效果不能处理的场合, 会继续处理之后的●效果.
+                            </p>
+                            <p>
+                                直到进入伤害计算时为止, 才算进行过战斗. 在伤害计算前因为各种原因导致战斗终止的场合, 不能在自己场上的「征服斗魂」怪兽或「斗神的虚像」上面重叠来超量召唤「征服斗魂 洛克斯」.
+                            </p>
+                            <p>
+                                场上存在守备表示的「No.41 泥睡魔兽 睡梦貘」, 「征服斗魂 螺旋流辻风」的效果处理把守备表示的「征服斗魂」怪兽变成攻击表示后, 选「No.41 泥睡魔兽 睡梦貘」变成里侧守备表示的场合, 那只变成攻击表示的「征服斗魂」怪兽就这样保持攻击表示.
+                            </p>
+                            <p>
+                                先攻的第1回合或者不能进行战斗阶段的回合以及主要阶段2, 不能发动「征服斗魂 潘特拉」②的『●地: 』效果.
+                            </p>
+                        </div>
 
                         <h2>注意</h2>
-                        <p>
-                            1. `斗神的虚像`没有`征服斗魂`字段, 那个①效果是对怪兽适用的效果. 那个②效果虽然是主要阶段才能发动的效果, 但数据库补充调整中贴心地写了一句`伤害步骤不能发动`.
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                「斗神的虚像」没有`征服斗魂`字段, 那个①效果是对怪兽适用的效果. 那个②效果是主要阶段才能发动的效果.
+                            </p>
+                            <p>
+                                「K9-ØØ号 野狼」的②效果只能在对方回合发动. 必须包含自身作为超量召唤的素材. 有它作为素材的超量怪兽有取对象抗性. 
+                            </p>
+                            <p>
+                                「“K9案件”」有上升攻击力的效果. 
+                            </p>
+                            <p>
+                                「K9-EX强制解除」只能在主要阶段发动. 处理时, 只要不在自己的怪兽区域表侧表示存在就完全不处理. 
+                            </p>
+                        </div>
+
+                        <h2>自肃</h2>
+                        <div class="auto-number">
+                            <p>
+                                「K9-04号 咒」特殊召唤的怪兽在场上表侧表示存在有只能从额外卡组特殊召唤「K9」怪兽的自肃. 
+                            </p>
+                            <p>
+                                「K9-66a号 霜妖」特殊召唤的怪兽不能作为光属性超量怪兽超量召唤的素材. 「K9-66b号 灯鬼」也一样.
+                            </p>
+                        </div>
 
                         <h2>卡组预览</h2>
 
