--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -139,7 +139,7 @@
                                 「仪式的事前准备」不能检索「巳剑降临」.
                             </p>
                             <p>
-                                「巳剑大祓」处理时必须处理解放自己场上1只其他怪兽. 必须存在可以解放的怪兽才能发动. 处理时, 不存在的场合, 这部分不处理.
+                                「巳剑大祓」的②效果处理时必须处理解放自己场上1只其他怪兽. 必须存在可以解放的怪兽才能发动. 处理时, 不存在的场合, 这部分不处理.
                             </p>
                         </div>
                         
