修改手机首页

--- a/DDD.html
+++ b/DDD.html
@@ -204,7 +204,7 @@
                         30998403
                         9024198
                         9024198
-                        !side
+                        !spareCards
                         27204314
                         27204314
                         84192580
