--- a/Exosister.html
+++ b/Exosister.html
@@ -196,7 +196,7 @@
                         5530780
                         29301450
                         98462037
-                        !side
+                        !spareCards
                         46502744
                         46502744
                         46502744
