--- a/KV.html
+++ b/KV.html
@@ -195,7 +195,7 @@
                         90448280
                         2061963
                         49456901
-                        !side
+                        !spareCards
                         46502744
                         46502744
                         46502744
