--- a/Kewl_Tune.html
+++ b/Kewl_Tune.html
@@ -173,7 +173,7 @@
                         9753964
                         66141736
                         21368273
-                        !side
+                        !spareCards
                         94145021
                         94145021
                         94145021
