--- a/Lunalight.html
+++ b/Lunalight.html
@@ -190,7 +190,7 @@
                             29301450
                             50277355
                             60303245
-                            !side
+                            !spareCards
                             27204313
                             84192580
                             84192580
