--- a/Maliss.html
+++ b/Maliss.html
@@ -183,7 +183,7 @@
                         30342076
                         24842059
                         60303245
-                        !side
+                        !spareCards
                         27204311
                         73642296
                         73642296
