--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -214,7 +214,7 @@
                             98462037
                             8264361
                             12067160
-                            !side
+                            !spareCards
                             92919429
                         </div>
 
