--- a/Orcust.html
+++ b/Orcust.html
@@ -176,7 +176,7 @@
                             65741786
                             48835607
                             48835607
-                            !side
+                            !spareCards
                             84192580
                             84192580
                             84192580
