--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -190,7 +190,7 @@
                             29301450
                             39341885
                             39341885
-                            !side
+                            !spareCards
                         </div>
 
                         <div id="deck-render"></div>
