--- a/Sky_Striker.html
+++ b/Sky_Striker.html
@@ -160,7 +160,7 @@
                             75147529
                             63013339
                             98462037
-                            !side
+                            !spareCards
                             27204311
                             73642296
                             73642296
