--- a/SynchronizeGS.html
+++ b/SynchronizeGS.html
@@ -141,7 +141,7 @@
                         77075360
                         53325668
                         37675907
-                        !side
+                        !spareCards
                         33854624
                         46502744
                         46502744
