--- a/Tellarknight.html
+++ b/Tellarknight.html
@@ -186,7 +186,7 @@
                             45852939
                             18326736
                             66532962
-                            !side
+                            !spareCards
                             18205590
                             86466163
                         </div>
