--- a/DracotailBranded.html
+++ b/DracotailBranded.html
@@ -202,7 +202,7 @@
                         78397661
                         5041348
                         29301450
-                        !side
+                        !spareCards
                         27204311
                         27204311
                         27204311
