--- a/Enneacraft.html
+++ b/Enneacraft.html
@@ -169,7 +169,7 @@
                         36346532
                         65741786
                         29301450
-                        !side
+                        !spareCards
                         81237046
                         81237046
                         10000080
