--- a/Solfachord.html
+++ b/Solfachord.html
@@ -172,7 +172,7 @@
                             86066373
                             16691074
                             53262004
-                            !side
+                            !spareCards
                         </div>
 
                         <div id="deck-render"></div>
