--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
         <div class="column large-full footer__content">
             <div class="footer__copyright">
                 <span>© Copyright PWB&SRDS 2026</span> 
-                <span>Design by <a href="https://space.bilibili.com/18234381">SRDSMello</a> and <a href="https://space.bilibili.com/6267249">水橋パルスィ</a></span>
+                <span>Design by <a href="https://space.bilibili.com/18234381">梅洛@神人都市</a> and <a href="https://space.bilibili.com/6267249">水橋パルスィ</a></span>
             </div>
         </div>
     </div>
