修复首页不显示

--- a/Lunalight.html
+++ b/Lunalight.html
@@ -236,7 +236,7 @@
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=0120fix"></script>
     <script src="js/deck-viewer.js"></script>
 
 </body>
