--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=0120fix"></script>
 
 </body>
 </html>
