--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -141,6 +141,9 @@
                             <p>
                                 「仪式的事前准备」不能检索「巳剑降临」.
                             </p>
+                            <p>
+                                「袭击队骑士」的超量召唤条件是暗属性4星怪兽×2, 不能用「夜刀蛇巳」作为素材.
+                            </p>
                         </div>
                         
                         <h2>自肃</h2>
@@ -216,6 +219,8 @@
                             12067160
                             !spareCards
                             92919429
+                            28781003
+                            64276752
                         </div>
 
                         <div id="deck-render"></div>
