增加烙印, 修改子页面logo

--- a/DracotailBranded.html
+++ b/DracotailBranded.html
@@ -26,9 +26,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="srds.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="srds.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="srds.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="srds.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="srds.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="srds.jpg">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -203,21 +203,7 @@
                         5041348
                         29301450
                         !spareCards
-                        27204311
-                        27204311
-                        27204311
-                        84192580
-                        84192580
-                        84192580
-                        4227096
-                        4227096
-                        4227096
-                        18144506
-                        19613556
-                        10045474
-                        10045474
-                        10045474
-                        23002292
+                        51409648
                         </div>
 
                         <div id="deck-render"></div>
