--- a/Sky_Striker.html
+++ b/Sky_Striker.html
@@ -26,9 +26,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="srds.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="srds.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="srds.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="srds.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="srds.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="srds.jpg">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
