--- a/header.html
+++ b/header.html
@@ -44,6 +44,7 @@
                     <li><a href="Solfachord.html">七音服</a></li>
                     <li><a href="Lunalight.html">月光</a></li>
                     <li><a href="Tellarknight.html">星骑士</a></li>
+                    <li><a href="Albaz.html">烙印</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
