--- a/Albaz.html
+++ b/Albaz.html
@@ -61,7 +61,7 @@
                         烙印
                         </h1>
                         <ul class="entry__header-meta">
-                            <li class="author">By <a href="#0">Mello</a></li>
+                            <li class="author">By <a href="https://space.bilibili.com/18234381">梅洛</a></li>
                             <li class="date">2026-01-15</li>
                             <!-- <li class="cat-links">
                                 <a href="#0">Marketing</a><a href="#0">Management</a>
