新增霍普界面

--- a/header.html
+++ b/header.html
@@ -45,6 +45,7 @@
                     <li><a href="Lunalight.html">月光</a></li>
                     <li><a href="Tellarknight.html">星骑士</a></li>
                     <li><a href="Albaz.html">烙印</a></li>
+                    <li><a href="Hope.html">霍普</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
