增加霍普卡组

--- a/Hope.html
+++ b/Hope.html
@@ -87,8 +87,63 @@
                         <div id="deck-raw" style="display:none;">
                             #created by OURYGO
                             #main
+                            27204311
+                            62880279
+                            62880279
+                            62880279
+                            42141493
+                            42141493
+                            42141493
+                            55088578
+                            23720856
+                            08512558
+                            35886170
+                            35886170
+                            35886170
+                            59724555
+                            69852487
+                            04647954
+                            09491461
+                            09491461
+                            14558127
+                            14558127
+                            62006866
+                            23434538
+                            94145021
+                            94145021
+                            94145021
+                            90711610
+                            90711610
+                            06595475
+                            06595475
+                            06595475
+                            32807846
+                            24224830
+                            65681983
+                            85119159
+                            97045737
+                            97045737
+                            97045737
+                            10045474
+                            10045474
+                            96004535
                             #extra
-                            !spareCards
+                            95134948
+                            63767246
+                            32530043
+                            00581014
+                            46772449
+                            66011101
+                            45852939
+                            06983839
+                            88917691
+                            84013237
+                            85692042
+                            31123642
+                            41522092
+                            65305468
+                            26973555
+                            !side
                         </div>
 
                         <div id="deck-render"></div>
