--- a/Hope.html
+++ b/Hope.html
@@ -70,17 +70,47 @@
                     </div> <!-- end entry__header -->
 
                     <div class="entry__content">
-                        <h2>裁定</h2>
-                        <div class="auto-number">
-                        </div>
+                    <h2>裁定</h2>
+                    <div class="auto-number">
+                        <p>
+                            「为让超量怪兽的效果发动而被取除」类效果, 这个发动的效果被发动无效的场合, 也可以发动这类效果.
+                        </p>
+                    </div>
 
-                        <h2>注意</h2>
-                        <div class="auto-number">
-                        </div>
+                    <h2>注意</h2>
+                    <div class="auto-number">
+                        <p>
+                            ①效果特殊召唤的「怒怒怒怒战士」在场上被无效后, 等级变回6, 攻击力变回2300.
+                        </p>
+                        <p>
+                            「异热同心从者-升华贤者」只有作为「希望皇 霍普」怪兽的超量素材才能赋予效果.
+                        </p>
+                        <p>
+                            「我我我我少女」只有在有口吃字段怪兽作为超量素材才能发动检索效果.
+                        </p>
+                        <p>
+                            「未来No.0 未来皇 霍普·异热同心」的涨攻效果只计算自己场上与对方墓地.
+                        </p>
+                        <p>
+                            自己没有可用的怪兽区域的场合, 也能发动「未来No.0 未来龙皇 霍普」的②效果. 处理时没有可用的怪兽区域的场合, 那个场上发动效果的怪兽破坏送去墓地.
+                        </p>
+                    </div>
 
-                        <h2>自肃</h2>
-                        <div class="auto-number">
-                        </div>
+                    <h2>自肃</h2>
+                    <div class="auto-number">
+                        <p>
+                            「怒怒怒怒战士」自跳后有从额外卡组超量召唤自肃. 「隆隆隆哥布林德伯格」发动①效果后也一样.
+                        </p>
+                        <p>
+                            「No.99 希望皇 霍普德拉戈纳」从额外卡组把怪兽特殊召唤的效果有全回合额外卡组特殊召唤超量怪兽誓约, 且只有自身可以直接攻击.
+                        </p>
+                        <p>
+                            「异热同心从者-希望贤者」发动卡组特召人效果后有额外卡组特殊召唤超量怪兽自肃, 且只有「No.」怪兽可以攻击.
+                        </p>
+                        <p>
+                            「圣王的粉碎」会影响: 「No.60 刻不知之杜加雷斯」, 「我我我我少女」, 「拟声蜥蜴」.
+                        </p>
+                    </div>
 
                         <h2>卡组预览</h2>
 
